--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    ::-webkit-scrollbar {
+      width: 4px;
+    }
+  
+    ::-webkit-scrollbar-track {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(8px);
+      border-radius: 10px;
+    }
+  
+    ::-webkit-scrollbar-thumb {
+      background: linear-gradient(to bottom, #35C091, #0B796C);
+      border-radius: 10px;
+    }
+  
+    ::-webkit-scrollbar-thumb:hover {
+      background: linear-gradient(to bottom, #2FA57E, #085D53);
+    }
+  }
